[workspace]
members = ["tanuki", "tanuki-common", "tanuki-bthome" , "tanuki-monitor", "tanuki-hass", "examples/dark-tanuki", "examples/dark-control-panel"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
tanuki        = { path = "tanuki" }
tanuki-common = { path = "tanuki-common" }
