[workspace]
members = ["tanuki", "tanuki-app", "tanuki-common", "tanuki-bthome" , "tanuki-hass", "examples/dark-tanuki", "examples/dark-control-panel", "tanuki-mpris"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.0.1"

[workspace.dependencies]
tanuki        = { version = "0.0.1", path = "tanuki" }
tanuki-common = { version = "0.0.1", path = "tanuki-common" }
