[workspace]
members = [
    "tanuki", "tanuki-app", "tanuki-common", "tanuki-bthome", "tanuki-hass", "tanuki-mpris",
    "examples/dark-tanuki", "examples/dark-control-panel",
]
resolver = "3"

[workspace.package]
version = "0.0.1"
authors = ["darkwater <dark@dark.red>"]
edition = "2024"
repository = "https://github.com/darkwater/tanuki"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tanuki        = { version = "0.0.1", path = "tanuki" }
tanuki-common = { version = "0.0.1", path = "tanuki-common" }
