[package]
name = "tanuki-bthome"
version.workspace = true
edition.workspace = true

[dependencies]
tanuki.workspace = true
tanuki-common.workspace = true

btleplug            = "0.11.8"
bytes               = "1.11.0"
chrono              = "0.4.42"
futures             = "0.3.31"
heck                = "0.5.0"
mqtt-endpoint-tokio = { version = "0.6.0", features = ["tracing"] }
mqtt-protocol-core  = { version = "0.7.3", features = ["tracing"] }
thiserror           = "2.0.17"
tokio               = { version = "1.48.0", features = ["rt-multi-thread", "macros", "tracing"] }
tracing             = "0.1.43"
