[package]
name = "tanuki-common"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono             = { version = "0.4.42", default-features = false, features = ["serde"] }
compact_str        = { version = "0.9.0",  default-features = false, features = ["serde"] }
mqtt-protocol-core = { version = "0.7.3",  default-features = false }
serde              = { version = "1.0",    default-features = false, features = ["derive", "alloc"] }
serde_json         = { version = "1.0",    default-features = false }
