[package]
name = "tanuki-hass"
edition.workspace = true
version.workspace = true

[dependencies]
tanuki        = { path = "../tanuki" }
tanuki-common = { path = "../tanuki-common" }

chrono            = { version = "0.4.42", features = ["serde"] }
futures           = "0.3.31"
serde             = { version = "1.0", features = ["derive"] }
serde_json        = "1.0.145"
thiserror         = "2.0.17"
tokio             = "1.47.2"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tracing           = "0.1.43"
