[package]
name = "tanuki-hass"
description = "Home Assistant bridge for Tanuki"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tanuki.workspace = true
tanuki-common.workspace = true

chrono            = { version = "0.4.42", features = ["serde"] }
futures           = "0.3.31"
serde             = { version = "1.0", features = ["derive"] }
serde_json        = "1.0.145"
thiserror         = "2.0.17"
tokio             = "1.47.2"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tracing           = "0.1.43"
