[package]
name = "tanuki-mpris"
description = "MPRIS adapter for Tanuki"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tanuki.workspace = true

anyhow = "1.0.100"
clap   = { version = "4.5.56", features = ["derive"] }
mpris  = "2.0.1"
tokio  = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
