[package]
name = "tanuki"
version = "0.1.0"
edition = "2024"

[dependencies]
tanuki-common.workspace = true

compact_str         = "0.9.0"
mqtt-endpoint-tokio = { version = "0.6.0", features = ["tracing"] }
mqtt-protocol-core  = { version = "0.7.3", features = ["tracing"] }
serde               = "1.0"
serde_json          = "1.0"
thiserror           = "2.0.17"
tokio               = { version = "1", features = ["sync"] }
tracing             = "0.1.43"
tracing-subscriber  = { version = "0.3.22", features = ["env-filter", "tracing-log"] }

[dev-dependencies]
tanuki-bthome = { path = "../tanuki-bthome" }
tanuki-hass   = { path = "../tanuki-hass" }

tokio = { version = "1.39.0", features = ["macros", "rt-multi-thread"] }
