[package]
name = "tanuki"
version.workspace = true
edition.workspace = true

[dependencies]
tanuki-common.workspace = true

compact_str         = "0.9.0"
mqtt-endpoint-tokio = { version = "0.6.0", default-features = false, features = ["tracing"] }
mqtt-protocol-core  = { version = "0.7.3", features = ["tracing"] }
serde               = "1.0"
serde_json          = "1.0"
thiserror           = "2.0.17"
tokio               = { version = "1", features = ["sync"] }
tracing             = "0.1.43"
tracing-subscriber  = { version = "0.3.22", features = ["env-filter", "tracing-log"] }

[features]
default = ["tls", "ws"]
tls     = ["mqtt-endpoint-tokio/tls"]
ws      = ["mqtt-endpoint-tokio/ws"]
