[package]
name = "dark-control-panel"
edition.workspace = true
version.workspace = true
publish = false

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
chrono = "0.4.42"
egui   = "0.33"
ehttp  = "0.6.0"
log    = "0.4"

[target.'cfg(not(target_os = "android"))'.dependencies]
eframe = { version = "0.33", default-features = true }

[target.'cfg(target_os = "android")'.dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "wgpu",
    "android-native-activity",
    "default_fonts",
] }

android_logger = { version = "0.15", default-features = false }
egui-winit     = { version = "0.33", default-features = false, features = [ "clipboard", "links" ] }
jni            = "0.21.1"
ndk-context    = "0.1.1"
wgpu           = { version = "27", default-features = false, features = [ "gles" ] }
