[package]
name = "dark-tanuki"
edition.workspace = true
version.workspace = true

[dependencies]
tanuki        = { path = "../../tanuki" }
tanuki-bthome = { path = "../../tanuki-bthome" }
tanuki-common = { path = "../../tanuki-common" }
tanuki-hass   = { path = "../../tanuki-hass" }

serde_json = "1.0"
tokio      = { version = "1.39.0", features = ["macros", "rt-multi-thread"] }
tracing    = "0.1.43"
